# lifeasacraft

./: README.md
backend/: alembic.ini  main.py  pyproject.toml
backend/api/: chat.py  project.py
backend/crud/: project.py
backend/db/: init_db.py  session.py
backend/migrations/: env.py
backend/migrations/versions/: 4806ce5bd09c_rename_content_and_add_view_columns.py
backend/models/: project.py
backend/schemas/: agent.py  convo.py  message.py  project.py
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/assets/: base.css  main.css
frontend/src/router/: index.ts
frontend/src/stores/: project.ts
frontend/src/types/: agent.ts  index.ts  message.ts  project.ts
frontend/src/views/: ConvoView.vue  HomeView.vue  NewProjectView.vue  ProjectView.vue  ProjectsView.vue
